# same-story-api

./: .gitignore  Dockerfile  Dockerfile.test  Pipfile  README.md  check.sh  docker-compose.yml  make_env.py  requirements-dev.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: deploy.yml  docker-image.yml  ecr-image.yml  main.yml  terraform.yml
aws_js_test/v3/: package.json  sqs_status_test.js
aws_sns_websocket/: README.md  onconnect.js  ondisconnect.js  onping.js  onpublish.js  onsubscribe.js
aws_sns_websocket/test/: package.json  test_websocket.js
nbs/: SNS-SQS.ipynb  check.ipynb
server/: app.py  check.py  helpful_scripts.py
server/test/: test_same_story_server.py
src/same_story_api/: app.py  check.py  helpful_scripts.py  tasks.py
src/same_story_api_engi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_same_story_server.py
