[metadata]
name = same-story-api-engi
version = 0.0.1
author = Christopher Kelly
author_email = christopherkelly@engi.network
description = Same Story? backend server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/engi-network/same-story-api
project_urls =
    Bug Tracker = https://github.com/engi-network/same-story-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    boto3[crt]
    coloredlogs

[options.packages.find]
where = src