[metadata]
name = same-story-api-engi
version = 0.0.1
author = Christopher Kelly
author_email = christopherkelly@engi.network
description = Same Story? backend server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/engi-network/same-story-api
project_urls =
    Bug Tracker = https://github.com/engi-network/same-story-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    aiobotocore==2.3.3
    aiohttp==3.8.1; python_version >= '3.6'
    aioitertools==0.10.0; python_version >= '3.6'
    aiosignal==1.2.0; python_version >= '3.6'
    amqp==5.1.1; python_version >= '3.6'
    async-timeout==4.0.2; python_version >= '3.6'
    attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
    awscrt==0.13.5
    billiard==3.6.4.0
    boto3[crt]==1.21.21
    botocore==1.24.21; python_version >= '3.6'
    celery[sqs]==5.2.7
    click-didyoumean==0.3.0; python_version < '4' and python_full_version >= '3.6.2'
    click-plugins==1.1.1
    click-repl==0.2.0
    click==8.1.3; python_version >= '3.7'
    coloredlogs==15.0.1
    frozenlist==1.3.0; python_version >= '3.7'
    humanfriendly==10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
    idna==3.3; python_version >= '3.5'
    jmespath==1.0.1; python_version >= '3.7'
    kombu==5.2.4; python_version >= '3.7'
    multidict==6.0.2; python_version >= '3.7'
    prompt-toolkit==3.0.29; python_full_version >= '3.6.2'
    pycurl==7.44.1
    python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
    python-dotenv==0.20.0
    pytz==2022.1
    s3transfer==0.5.2; python_version >= '3.6'
    six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
    typing-extensions==4.2.0; python_version < '3.10'
    urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
    vine==5.0.0; python_version >= '3.6'
    wcwidth==0.2.5
    wrapt==1.14.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
    yarl==1.7.2; python_version >= '3.6'
    message-queue-engi @ git+https://github.com/engi-network/engi-message-queue.git


[options.packages.find]
where = src